--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IFC Model Mapper - Конвертер моделей</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/monaco-editor@0.33.0/min/vs/loader.js"></script>
 </head>
 <body>
@@ -113,6 +113,6 @@
 		</div>
 	</div>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
