fix additional settings menu

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 			
 			<div class="modal-sections">
 				<div class="modal-section">
-					<h4>Настройки геометрии</h4>
+					<h4>Настройки</h4>
 					<div style="color: #64748b; font-style: italic;">
 						Настройки будут добавлены позже
 					</div>
 				</div>
 				<div class="modal-section">
-					<h4>Настройки свойств</h4>
+					<h4>Ещё настройки</h4>
 					<div style="color: #64748b; font-style: italic;">
 						Настройки будут добавлены позже
 					</div>
