--- a/index.html
+++ b/index.html
@@ -71,17 +71,19 @@
                 <div class="panel-header">
                     <h3>Результат преобразования</h3>
                     <div class="panel-actions">
-                        <button id="downloadBtn">Скачать IFC</button>
-                        <button id="exportMappingBtn" class="export-button">Экспорт соответствий</button>
-                        <button id="fullscreenTargetBtn" class="fullscreen-button">⛶</button>
-                    </div>
+						<button id="validateMappingBtn">Проверить</button>
+						<button id="downloadBtn">Скачать IFC</button>
+						<button id="exportMappingBtn" class="export-button">Экспорт соответствий</button>
+						<button id="fullscreenTargetBtn" class="fullscreen-button">⛶</button>
+					</div>
                 </div>
                 <div class="tabs-container">
                     <div class="tabs-header">
-                        <button class="tab-button active" data-tab="ifc-result">IFC Результат</button>
-                        <button class="tab-button" data-tab="class-mapping">Сопоставление классов</button>
-                        <button class="tab-button" data-tab="attribute-mapping">Сопоставление атрибутов</button>
-                    </div>
+						<!-- <button class="tab-button active" data-tab="ifc-result">IFC Результат</button> -->
+						<button class="tab-button" data-tab="class-mapping">Сопоставление классов</button>
+						<button class="tab-button" data-tab="attribute-mapping">Сопоставление атрибутов</button>
+						<button class="tab-button" data-tab="association-mapping">Сопоставление ассоциаций</button>
+					</div>
                     <div class="tabs-content">
                         <div id="ifc-result" class="tab-pane active">
                             <div id="targetEditor" class="editor"></div>
@@ -91,6 +93,7 @@
                                 <div class="mapping-header">
                                     <span class="source-header">OWL Класс</span>
                                     <span class="target-header">IFC Эквивалент</span>
+                                    <span class="verified-header">Подтверждено</span>
                                 </div>
                                 <div id="classMappingList" class="mapping-list">
                                     <!-- Сюда будут добавляться строки соответствий -->
@@ -101,13 +104,26 @@
                             <div class="mapping-container">
                                 <div class="mapping-header">
                                     <span class="source-header">OWL Атрибут</span>
-                                    <span class="target-header">IFC Эквивалент</span>
+                                    <span class="target-header">IFC Атрибут</span>
+                                    <span class="verified-header">Подтверждено</span>
                                 </div>
                                 <div id="attributeMappingList" class="mapping-list">
                                     <!-- Сюда будут добавляться строки соответствий -->
                                 </div>
                             </div>
                         </div>
+						<div id="association-mapping" class="tab-pane">
+							<div class="mapping-container">
+								<div class="mapping-header">
+									<span class="source-header">OWL Ассоциация</span>
+									<span class="target-header">IFC Отношение</span>
+									<span class="verified-header">Подтверждено</span>
+								</div>
+								<div id="associationMappingList" class="mapping-list">
+									<!-- Сюда будут добавляться строки соответствий ассоциаций -->
+								</div>
+							</div>
+						</div>
                     </div>
                 </div>
             </div>
